fix: 修复测试代码兼容性，使用 Arrays.asList 替代 List.of
项目使用 JDK 1.8，List.of() 是 JDK 9+ API